--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,17 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+        <groupId>taglibs</groupId>
+        <artifactId>standard</artifactId>
+        <version>1.1.2</version>
+        </dependency>
+
         <!--javaweb包引入结束-->
 
     </dependencies>
